bash: updated run script to resolve warnings